deployment/kubernetes/backoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice
  namespace: connectentrepreneurs
spec:
  selector:
    app: backoffice
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
