deployment/kubernetes/mobile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile
  namespace: connectentrepreneurs
spec:
  selector:
    app: mobile
  ports:
  - name: expo
    port: 19000
    targetPort: 19000
  - name: expo-web
    port: 19001
    targetPort: 19001
  - name: expo-devtools
    port: 19002
    targetPort: 19002
  type: LoadBalancer
